<resources>
    <string name="app_name">messengerNew</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messenger_name">kek messenger</string>
    <string name="settings_menu_change_name">изменить имя</string>
    <string name="settings_menu_exite">выход</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_hint_default_code">------</string>
    <string name="register_title_our_phone">Ваш телефон</string>
    <string name="register_enter_phone_number">введите номер телефона</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="incorrect_code_toast">Неверно введен код</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="confirm">confirm</string>
    <string name="setting_toast_name_is_empty">Имя не должно быть пустым</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_label_phone_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_default_username" />
    <string name="settings_default_status" />
    <string name="settings_default_number" />
    <string name="settings_default_login" />
    <string name="settings_label_login" />
    <string name="settings_login">Имя пользователя</string>
    <string name="settings_default_bio" />
    <string name="settings_phone_number">Номер телефона</string>
    <string name="settings_hint_input_username">username</string>
    <string name="contact_fullName">kek lol</string>
    <string name="contact_status">в сети</string>
</resources>